--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h2 {
 }
 
 .homes {
-    /* border: 1px solid gray; */
+    border: 1px solid black;
     width: 820px;
     margin-left: 270px;
 }
@@ -80,9 +80,9 @@ h2 {
 }
 @media (max-width:760px){
     .homes {
-        /* border: 1px solid gray; */
+        border: 1px solid black;
         width: 340px;
-        margin-left:40px;
+        margin-left:30px;
     }
     .aboutpic img {
         width: 335px;
