--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h2 {
     }
 }
 
-@media (max-width:1024px) {
+/* @media (max-width:1024px) {
     .homes {
         border: 1px solid black;
         width: 700px;
@@ -106,7 +106,7 @@ h2 {
         background-color: rgb(156, 156, 156);
         width: 150px;
     }
-}
+} */
 
 
 #head {
